@@ -549,7 +549,7 @@ static void Handle_event
 	{
 					// For detecting double-clicks.
 	static unsigned long last_b1_click = 0;
-//cout << "Event " << (int) event.type << " received"<<endl;
+	//cout << "Event " << (int) event.type << " received"<<endl;
 	switch (event.type)
 		{
 	case SDL_MOUSEBUTTONDOWN:
