@@ -1,6 +1,6 @@
 INCLUDES = -I.. -I../files $(SDL_INCLUDES) $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS)
 
-lib_LTLIBRARIES = libflic.la
+noinst_LTLIBRARIES = libflic.la
 
 libflic_la_SOURCES =	\
 	playfli.cc	\
